[project]
name = "stock-agent"
version = "0.1.0"
description = "A conversational stock-tracking agent powered by Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "yfinance>=0.2.50",
    "requests>=2.32.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent", "tools"]
